...
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/linearLayout">

  <Button
    android:id="@+id/track_button"
    android:layout_width="180dp"
    android:layout_height="54dp"
    android:layout_marginBottom="64dp"
    android:background="@color/res_green"
    android:clickable="true"
    android:focusable="true"
    android:text="@string/plan_track_button"
    android:textColor="@color/res_white"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/notes_edittext"/>

  <TextView
    android:id="@+id/center_day_textview"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    android:gravity="center"
...
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/month_progress_textview"
    />

  <Spinner
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/res_green"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
...

      <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
          android:id="@+id/vertical_layout_1"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
          app:layout_constraintStart_toStartOf="parent"
...
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_7"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_2"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
...
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_6"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_3"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
...
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_5"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_4"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
...
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_4"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_5"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
...
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_3"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_6"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
...
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>

          <TextView
            android:id="@+id/textview_day_2"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/vertical_layout_7"
          android:layout_width="wrap_content"
          android:layout_height="130dp"
          android:layout_marginStart="25dp"
          android:layout_gravity="center_horizontal"
          android:gravity="bottom|center_horizontal"
          android:orientation="vertical"
...
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="23sp"/>


          <TextView
            android:id="@+id/textview_day_1"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@color/res_green_transparent"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
...
